Updated Backup.apk and fixed strings
Updated Backup.apk and changed "XiaoMi" with "Xiaomi" strings in
MiuiVideoplayer.apk and XiaomiServiceFramework.apk

--- a/Danish/main/Backup.apk/res/values-da/strings.xml
+++ b/Danish/main/Backup.apk/res/values-da/strings.xml
@@ -38,35 +38,99 @@
   <string name="backup_report">Backup rapport</string>
   <string name="backup_update">Rediger backup</string>
   <string name="batch_delete_backup_confirm">Er du sikker på du vil slette?</string>
+  <string name="button_abandon">Afbryd</string>
   <string name="button_backup">Backup</string>
   <string name="button_cancel">Annuller</string>
+  <string name="button_continue">Fortsæt</string>
+  <string name="button_delete">Slet</string>
   <string name="button_finish">Færdig</string>
   <string name="button_next">Næste</string>
   <string name="button_ok">OK</string>
+  <string name="button_restore">Gendan</string>
   <string name="button_return">Tilbage</string>
   <string name="call_title">Opkaldslister</string>
   <string name="cancel">Annuller</string>
   <string name="cancel_backup">Annuller backup</string>
   <string name="cancel_restore">Annuller gendannelse</string>
+  <string name="cloud_app_backup_cancel">Annuller backup</string>
+  <string name="cloud_app_backup_cancel_prompt_message">"Backup ikke færdig, tryk Ok for at annullere backup"</string>
+  <string name="cloud_app_backup_cancel_prompt_title">Annuller backup</string>
+  <string name="cloud_app_backup_date">"Backup taget "</string>
+  <string name="cloud_app_backup_pending">Afventer...</string>
+  <string name="cloud_app_backup_progress">Backup igang...</string>
+  <string name="cloud_app_backup_summary">Tag automatisk backup af apps og brugerdata når telefonen oplader og er forbundet til Wi-Fi</string>
+  <string name="cloud_app_backup_title">Backup til MiCloud</string>
+  <string name="cloud_app_check_data">Forespørger data fra MiCloud...</string>
+  <string name="cloud_app_check_data_fail">Forespørgsel fra MiCloud fejlede</string>
+  <string name="cloud_app_check_data_timeout">Timeout for forespørgsel af data fra MiCloud</string>
+  <string name="cloud_app_current_device">Nuværende enhed</string>
+  <string name="cloud_app_data_in_other_devices">Ingen MiCloud backups på denne enhed.</string>
+  <string name="cloud_app_delete_data">Slet backup</string>
+  <string name="cloud_app_device">Enhed</string>
+  <string name="cloud_app_dont_restore">"Gendan ikke"</string>
+  <string name="cloud_app_find_backup_prompt_1">Før du gendanner, ønsker du at gemme dine lokale data?</string>
+  <string name="cloud_app_find_backup_prompt_2">Hvis du afbryder det nu, vil det blive overskrevet når du gendanner.</string>
+  <string name="cloud_app_function_summary">Når du laver backup af dine data online, kan du hurtigt gendanne det på en hvilken som helst enhed.</string>
+  <string name="cloud_app_invalid_op">"Du kan ikke se data online, imens der bliver foretaget backup eller gendannelse."</string>
+  <string name="cloud_app_invalid_op_when_removing">"Du kan ikke se MiCloud data imens det bliver slettet!"</string>
+  <string name="cloud_app_just_show_in_current_device">Vis kun apps på denne enhed</string>
+  <string name="cloud_app_load_data">Forespørger backup data liste...</string>
+  <string name="cloud_app_load_data_timeout">Timeout ved forespørgsel af data fra MiCloud</string>
+  <string name="cloud_app_loading_with_mobile_network_prompt">"Mobil data trafik vil blive benyttet ved fortsættelse. Ønsker du at fortsætte?"</string>
+  <string name="cloud_app_mine">Hentede apps</string>
   <string name="cloud_app_name">Online Backup</string>
+  <string name="cloud_app_no_data">Ingen data her.</string>
+  <string name="cloud_app_no_network">Netværk ikke tilgængeligt</string>
+  <string name="cloud_app_no_wifi">Wi-Fi ikke tilgængelig</string>
+  <string name="cloud_app_no_wifi_connect">Ingen Wi-Fi forbindelse tilgængelig</string>
+  <string name="cloud_app_other_devices">Andre enheder</string>
+  <string name="cloud_app_remove_cancel">Annuller sletning</string>
+  <string name="cloud_app_remove_cancel_prompt_message">"Slet ufuldstændig backup, tryk OK
+for at annullere"</string>
+  <string name="cloud_app_remove_cancel_prompt_title">Stop sletning</string>
+  <string name="cloud_app_remove_error">Kunne ikke slette!</string>
+  <string name="cloud_app_remove_pending">Venter på at slette...</string>
+  <string name="cloud_app_remove_progress">Sletter...</string>
+  <string name="cloud_app_remove_prompt">%1$s af data vil blive slettet. Ønsker du at fortsætte?</string>
+  <string name="cloud_app_restore_action_bar_title">%1$s af data er blevet sikkerhedskopieret</string>
+  <string name="cloud_app_restore_app_and_data">Gendan apps og brugerdata</string>
+  <string name="cloud_app_restore_cancel">Annuller gendannelse</string>
+  <string name="cloud_app_restore_cancel_prompt_message">"Gendannelse ufuldstændig. Tryk OK
+for at annullere gendannelse"</string>
+  <string name="cloud_app_restore_cancel_prompt_title">Annuller gendannelse</string>
+  <string name="cloud_app_restore_data">Gendan tidligere installerede apps</string>
+  <string name="cloud_app_restore_data_title">Gendan brugerdata</string>
+  <string name="cloud_app_restore_error">Gendannelse mislykkedes!</string>
+  <string name="cloud_app_restore_pending">Afventer gendannelse...</string>
+  <string name="cloud_app_restore_progress">Gendanner...</string>
   <string name="cloud_backup_hint">Du skal være logget ind\n for at lave backup, gendanne data, og\n indstille automatisk backup</string>
-  <string name="cloud_backup_login">MIUI konto</string>
+  <string name="cloud_app_restore_query_error_prompt">"Hentning af data fra MiCloud mislykkedes. Apps og brugerdata vil blive gendannet automatisk når din enhed har mulighed for at forbinde."</string>
+  <string name="cloud_app_restore_success">Apps gendannet!</string>
+  <string name="cloud_app_restore_summary">Gendan tidligere installerde apps og tilhørende brugerdata</string>
+  <string name="cloud_app_restore_wifi_prompt">Forbind til internettet med Wi-Fi for at gendanne app- og brugerdata.</string>
+  <string name="cloud_app_total_size">MiCloud backup størrelse: %1$s</string>
+  <string name="cloud_app_version_size">Version: %1$s, Størrelse: %2$s</string>
+  <string name="cloud_app_wait_wifi">Afventer Wi-Fi forbindelse</string>
+  <string name="cloud_backup_hint">Log ind for sikkert at gemme og gendanne dine backups</string>
+  <string name="cloud_backup_login">Log ind med din Xiaomi konto</string>
   <string name="cloud_backup_window_title">Online Data Backup</string>
   <string name="cloud_home_title">Online Backup</string>
-  <string name="cloud_item_info_summary">" (Lokal : %1$s | Cloud : %2$s)"</string>
+  <string name="cloud_item_info_summary">" (Lokal : %1$s | Online : %2$s)"</string>
   <string name="cloud_last_backup">Sidste backup:</string>
-  <string name="cloud_no_backup">Ingen backup</string>
+  <string name="cloud_no_backup">Ingen Online data backup</string>
   <string name="cloud_restore_guide">Tryk Start gendannelse for at gøre dette\n Du kan også gendanne %s i Backup</string>
   <string name="cloud_restore_title">Gendan backup data</string>
   <string name="cloud_restore_window_title">Online Data Gendannelse</string>
   <string name="cloud_search">Søger...</string>
-  <string name="compute_backup_info">Henter backup info</string>
-  <string name="compute_delete_contact_info">Slet kontakt information</string>
+  <string name="compute_backup_info">Henter backup info...</string>
+  <string name="compute_delete_contact_info">Slet kontakt information...</string>
   <string name="contact_title">Kontakter</string>
   <string name="current_account">Nuværende konto: %s</string>
   <string name="current_sim">Nuværende SIM</string>
-  <string name="data_no_enough_space">Ikke nok intern plads</string>
-  <string name="data_no_enough_space_message">Gendannelse vil muligvis mislykkes, venligst frigør Restore may fail, please free some space and try again</string>
+  <string name="customization">&lt;u&gt;Tilpas&lt;/u&gt;</string>
+  <string name="customization_under_wifi_prompt">Kun understøttet når Wi-Fi benyttes</string>
+  <string name="data_no_enough_space">Ikke nok intern plads. Frigør noget plads og prøv igen</string>
+  <string name="data_no_enough_space_message">Gendannelse vil muligvis mislykkes, venligst frigør noget plads og prøv igen</string>
   <string name="date_format">dd/MM/yyyy - HH:mm</string>
   <string name="delete">Slet</string>
   <string name="delete_backup_process">Sletter backup, vent venligst...</string>
@@ -87,13 +151,14 @@
   <string name="findlost_contact_online">Søg efter kontakt online</string>
   <string name="guarded_mode_dialog_message">Kan ikke lave backup/gendannelse i Beskyttet tilstand</string>
   <string name="guarded_mode_dialog_title">Beskyttet tilstand</string>
-  <string name="import_from_xiaomi_account_hint1">1. Start en telefon med kontakter\n\n2. Installer MiTalk og log ind.\n http://www.miliao.com\n\n3. Gå til MiTalk indstillinger og vælg ”Backup Kontakter til Xaomi konto”</string>
+  <string name="import_from_xiaomi_account_hint1">1. Start en telefon med kontakter\n\n2. Installer MiTalk og log ind.\n http://www.miliao.com\n\n3. Gå til MiTalk indstillinger og vælg ”Backup Kontakter til Xiaomi konto”</string>
   <string name="import_from_xiaomi_account_hint2">Bemærk: Gå til næste trin hvis backup allerde har fundet sted</string>
   <string name="import_from_xiaomi_account_hint_title">Anvend MiTalk til at tage backup af kontakter på andre enheder, ikke MI-ONE</string>
+  <string name="just_support_op_with_wifi_connected">Kun understøttet når Wi-Fi benyttes</string>
   <string name="local_app_name">Backup</string>
   <string name="local_backup_window_title">Lokal Data Backup</string>
   <string name="local_home_title">Lokal Backup</string>
-  <string name="local_no_backup">Ingen lokale backups.</string>
+  <string name="local_no_backup">Ingen lokale backups</string>
   <string name="local_restore_window_title">Lokal Data Gendannelse</string>
   <string name="local_select_account_contact">Konti / Kontakter</string>
   <string name="local_select_sysdata">System</string>
@@ -103,6 +168,7 @@
   <string name="miliao_account_login">Log ind på MiTalk</string>
   <string name="mms_title">MMS beskeder</string>
   <string name="multi_select_title">%1$s elementer valgt</string>
+  <string name="my_phone">Min enhed</string>
   <string name="no_encrypt_password">Ingen krypteringsnøgle</string>
   <string name="no_network">Ingen netværskforbindelse. Kontroller indstilinger og prøv igen</string>
   <string name="note_title">Noter</string>
