--- a/Danish/main/BugReport.apk/res/values-da/strings.xml
+++ b/Danish/main/BugReport.apk/res/values-da/strings.xml
@@ -3,6 +3,7 @@
   <string name="action_submit">Indsend</string>
   <string name="app_label">Feedback</string>
   <string name="btn_send">Send</string>
+  <string name="bugreport_feedback_from">Fra: %s</string>
   <string name="description">Beskrivelse (påkrævet)</string>
   <string name="discard_draft_dialog_button_cancel">Annuller</string>
   <string name="discard_draft_dialog_button_discard">OK</string>
