--- a/Danish/main/Calculator.apk/res/values-da/strings.xml
+++ b/Danish/main/Calculator.apk/res/values-da/strings.xml
@@ -26,7 +26,7 @@
   <string name="dot">.</string>
   <string name="dotDesc">punkt</string>
   <string name="e">e</string>
-  <string name="eDesc">"Euler's number"</string>
+  <string name="eDesc">"Eulers tal"</string>
   <string name="e_mathematical_value">e</string>
   <string name="enter">↓</string>
   <string name="equal">=</string>
@@ -62,6 +62,8 @@
   <string name="sqrt">√</string>
   <string name="sqrtDesc">kvadratrod</string>
   <string name="standard">standard</string>
+  <string name="switch_to_scientific_pad">Skift til videnskabelig</string>
+  <string name="switch_to_standard_pad">Skift til standard</string>
   <string name="tan">tan</string>
   <string name="tanDesc">tangent</string>
   <string name="tan_mathematical_value">tan</string>
