--- a/Danish/main/Backup.apk/res/values-da/strings.xml
+++ b/Danish/main/Backup.apk/res/values-da/strings.xml
@@ -53,7 +53,8 @@
   <string name="cancel_backup">Annuller backup</string>
   <string name="cancel_restore">Annuller gendannelse</string>
   <string name="cloud_app_backup_cancel">Annuller backup</string>
-  <string name="cloud_app_backup_cancel_prompt_message">"Backup ikke færdig, tryk Ok for at annullere backup"</string>
+  <string name="cloud_app_backup_cancel_prompt_message">"Backup ikke færdig, tryk 
+  Ok for at annullere backup"</string>
   <string name="cloud_app_backup_cancel_prompt_title">Annuller backup</string>
   <string name="cloud_app_backup_date">"Backup taget "</string>
   <string name="cloud_app_backup_pending">Afventer...</string>
@@ -103,7 +104,7 @@ for at annullere gendannelse"</string>
   <string name="cloud_app_restore_error">Gendannelse mislykkedes!</string>
   <string name="cloud_app_restore_pending">Afventer gendannelse...</string>
   <string name="cloud_app_restore_progress">Gendanner...</string>
-  <string name="cloud_backup_hint">Du skal være logget ind\n for at lave backup, gendanne data, og\n indstille automatisk backup</string>
+  <string name="cloud_app_restore_prompt">Gendannelse vil overskrive lokale brugerdata, med data der er blevet kopieret til MiCloud.</string>
   <string name="cloud_app_restore_query_error_prompt">"Hentning af data fra MiCloud mislykkedes. Apps og brugerdata vil blive gendannet automatisk når din enhed har mulighed for at forbinde."</string>
   <string name="cloud_app_restore_success">Apps gendannet!</string>
   <string name="cloud_app_restore_summary">Gendan tidligere installerde apps og tilhørende brugerdata</string>
