--- a/Danish/main/AntiSpam.apk/res/values-da/strings.xml
+++ b/Danish/main/AntiSpam.apk/res/values-da/strings.xml
@@ -1,142 +1,89 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="act_action_accept_accept">Standard</string>
-  <string name="act_action_accept_mute">Lydløs beskeder</string>
-  <string name="act_action_accept_reject">Afvis beskeder</string>
-  <string name="act_action_mute_accept">Opkald lydløs</string>
-  <string name="act_action_mute_mute">Opkald og beskeder lydløs</string>
-  <string name="act_action_mute_reject">Opkald lydløs, afvis beskeder</string>
-  <string name="act_action_reject_accept">Afvis opkald</string>
-  <string name="act_action_reject_mute">Afvis opkald, beskeder lydløs</string>
-  <string name="act_action_reject_reject">Afvis opkald og beskeder</string>
-  <string name="act_call">Blokerede opkald muligheder</string>
-  <string name="act_del_ms">Afvis beskeder</string>
-  <string name="act_del_ms_summary">Blokerede beskeder vil med denne funktion ikke fremgå i beskedlister</string>
-  <string name="act_hangup_call">Afvis opkald</string>
-  <string name="act_hangup_call_summary">Blokerede opkald vil med denne funktion ikke fremgå i opkaldslisterne</string>
-  <string name="act_ignore_call">Standard</string>
-  <string name="act_ignore_ms">Standard</string>
-  <string name="act_ms">Blokerede beskeder muligheder</string>
-  <string name="act_mute_call">Lydløs opkald</string>
-  <string name="act_mute_call_summary">Ingen notifikation og vibraton, opkald vil fremgå i opkaldslisterne</string>
-  <string name="act_mute_ms">Lydløs beskeder</string>
-  <string name="act_mute_ms_summary">Ingen notifikation og vibration, beskeder vil fremgå i beskedlister</string>
-  <string name="add_blacklist">Tilføj til Blackliste</string>
-  <string name="add_button">Tilføj</string>
-  <string name="add_whitelist">Tilføj til Godkendte</string>
-  <string name="anti_private_summary">Opfang og bloker hemmelige numre og log dem</string>
-  <string name="anti_private_title">Bloker hemmelige numre</string>
-  <string name="anti_stranger_summary">Bloker opkald fra ukendte kontakter</string>
-  <string name="anti_stranger_title">Anti-fremmed</string>
-  <string name="app_name">Firewall</string>
-  <string name="black_white_list_tab_title">Blokering</string>
-  <string name="blacklist_tab_title">Blackliste</string>
-  <string name="call_log_tab_title">Opkald</string>
-  <string name="calllog">Opkaldsliste</string>
-  <string name="cancel_button">Annuller</string>
-  <string name="check_all">Vælg alle</string>
-  <string name="check_nothing">Ryd alle</string>
-  <string name="clear_all_calllog">Slet opkaldslister</string>
-  <string name="clear_all_mslog">Slet beskedlister</string>
-  <string name="close_rule">Deaktiver firewall regler</string>
-  <string name="confirm">Bekræft</string>
-  <string name="confirm_clear_blacklist">Er du sikker på du vil slette blacklisten?</string>
-  <string name="confirm_clear_whitelist">Er du sikker på du vil slette Godkendte?</string>
-  <string name="context_add_contact">Tilføj Kontakt</string>
-  <string name="context_call">Ring op</string>
-  <string name="context_ms">Send besked</string>
-  <string name="context_new_contact">Ny Kontakt</string>
-  <string name="custom_mark_category">Brugerdefineret</string>
-  <string name="edit_blacklist">Rediger Blackliste</string>
-  <string name="edit_whitelist">Rediger Godkendte</string>
-  <string name="emptylist_fwlog_call">Opkald vil blive registreret når firewall feature er TIL</string>
-  <string name="emptylist_fwlog_ms">Beskeder vil blive registreret når firewall feature er TIL</string>
-  <string name="enable_firewall">Aktiver blokering</string>
-  <string name="firewall_action">Firewall handling</string>
-  <string name="firewall_log">Firewall log</string>
-  <string name="firewall_settings">Firewall indstillinger</string>
-  <string name="firewall_settings_tab_title">Opsætning</string>
-  <string name="fw_action_settings">Handlinger</string>
-  <string name="fw_add_keyword">Tilføj nøgleord</string>
-  <string name="fw_add_keyword_existing">Nøgleordet %s eksisterer allerede</string>
-  <string name="fw_add_list_title">Indtast telefonnummer</string>
-  <string name="fw_advanced_settings">Avancerede indstillinger</string>
-  <string name="fw_all_day">Hele dagen</string>
-  <string name="fw_blacklist">Blackliste</string>
-  <string name="fw_blacklist_hint">Blacklistede numre vil blokeres ved opkald og beskeder</string>
-  <string name="fw_blocked">Blokering er TIL</string>
-  <string name="fw_blocked_count" formatted="false">Blokerede %d Opkald %d Beskeder</string>
-  <string name="fw_call" formatted="false">Opkald blokeret: %s (%d)</string>
-  <string name="fw_call_imported">Importer fra opkaldsliste</string>
-  <string name="fw_call_muted">Opkald er lydløse</string>
-  <string name="fw_call_rejected">Opkald blokeres</string>
-  <string name="fw_clear_all_keyword">Slet alle nøgleord</string>
-  <string name="fw_clear_blacklist">Ryd blackliste</string>
-  <string name="fw_clear_whitelist">Ryd godkendte</string>
-  <string name="fw_edit_keyword">Rediger nøgleord</string>
-  <string name="fw_end_time">Slut tid</string>
-  <string name="fw_import_blacklist">Tilføjer blackliste...</string>
-  <string name="fw_import_blacklist_confirm">%d numre valgt, importer til blackliste?</string>
-  <string name="fw_import_ms">Importer alle beskeder fra kontakt</string>
-  <string name="fw_import_whitelist">Tilføjer godkendte...</string>
-  <string name="fw_import_whitelist_confirm">%d numre valgt, importer til Godkendte?</string>
-  <string name="fw_in_blacklist">Nummer: %s eksisterer allerede i Blackliste</string>
-  <string name="fw_in_whitelist">Number: %s eksisterer allerede i Godkendte</string>
-  <string name="fw_keyword_filter">Beskedfiltrering</string>
-  <string name="fw_keyword_filter_summary">Filtrer beskeder baseret på nøgleord</string>
-  <string name="fw_keyword_list">Liste over nøgleord</string>
-  <string name="fw_keyword_list_hint">Beskeder modtaget indeholdende følgende nøgleord bliver blokeret</string>
-  <string name="fw_log_inf">Log</string>
-  <string name="fw_menu_new_blacklist_title">Tilføj til blackliste</string>
-  <string name="fw_menu_new_manual">Tilføj nummer</string>
-  <string name="fw_menu_new_whitelist_title">Tilføj til godkendte</string>
-  <string name="fw_menu_pick_from_contact">Vælg fra kontakter...</string>
-  <string name="fw_menu_remove">Fjern</string>
-  <string name="fw_ms" formatted="false">Beskeder blokeret: %s (%d)</string>
-  <string name="fw_ms_filtered">Filtrerede beskeder</string>
-  <string name="fw_ms_imported">Beskeder importeret</string>
-  <string name="fw_ms_muted">Beskeder er lydløse</string>
-  <string name="fw_ms_rejected">Beskeder blokeres</string>
-  <string name="fw_no_effect">Anti-forstyr feature er ikke slået til. Den skal slås til for at gennemføre, fortsæt?</string>
-  <string name="fw_notes_hint">Bemærkninger (valgfri)</string>
-  <string name="fw_notification_settings">Notifikationsindstillinger</string>
-  <string name="fw_on">Firewall er TIL</string>
-  <string name="fw_period">I en periode</string>
-  <string name="fw_restore_ms">Gendan beskeder</string>
-  <string name="fw_set_keyword">Definer nøgleord</string>
-  <string name="fw_start_time">Start tid</string>
-  <string name="fw_time_settings">Blokeringstid</string>
-  <string name="fw_whitelist">Godkendte</string>
-  <string name="fw_whitelist_hint">Godkendte numre vil accepteres ved opkald og beskeder</string>
+  <string name="app_name">Guard</string>
+  <string name="bl_block_info" formatted="false">Blokeret: Nummer %d, detaljer %d</string>
+  <string name="bl_no_blacklist">Ingen blokerede numre</string>
+  <string name="bl_no_block_call">Ingen blokerede opkald</string>
+  <string name="bl_no_block_sms">Ingen blokerede beskeder</string>
+  <string name="dlg_add_blacklist">Bloker dette nummer?</string>
+  <string name="dlg_add_keyword">Tilføj nøgleord</string>
+  <string name="dlg_add_manual_hint">Tast telefonnummer</string>
+  <string name="dlg_add_manual_ok">Tilføj</string>
+  <string name="dlg_bl_add_manual">Tilføj nummer manuelt til blackliste</string>
+  <string name="dlg_clear_all_call">Ryd blokerede opkald?</string>
+  <string name="dlg_clear_all_ok">Ryd alle</string>
+  <string name="dlg_clear_all_sms">Ryd alle blokerede beskeder?</string>
+  <string name="dlg_clear_blacklist">Ryd blackliste?</string>
+  <string name="dlg_clear_blacklist_ok">Ryd</string>
+  <string name="dlg_clear_current_call">Ryd alle blokerede opkald fra dette nummer?</string>
+  <string name="dlg_clear_current_ok">Slet</string>
+  <string name="dlg_clear_current_sms">Slet alle blokerede beskeder fra dette nummer?</string>
+  <string name="dlg_delete_keyword">Slet valgte nøgleord?</string>
+  <string name="dlg_edit_keyword">Rediger nøgleord</string>
+  <string name="dlg_import_blacklist">Importerer til blackliste</string>
+  <string name="dlg_import_whitelist">Tilføjer til undtagelser…</string>
+  <string name="dlg_keyword_ok">Gem</string>
+  <string name="dlg_no_block">"Bloker ikke dette nummer?"</string>
+  <string name="dlg_no_block_ok">"Bloker ikke"</string>
+  <string name="dlg_remove_blacklist">Slet dette nummer fra blackliste?</string>
+  <string name="dlg_remove_blacklist_ok">Slet</string>
+  <string name="dlg_retore">Gendan til Beskeder app?</string>
+  <string name="dlg_retore_ok">Gendan</string>
+  <string name="fw_blocked">Blokeringsstatistik</string>
+  <string name="fw_blocked_count" formatted="false">Opfanget: %d Opkald og %d Beskeder</string>
   <string name="log_count">(%d)</string>
-  <string name="mark_number_dialog_maintitle">Marker ukendt nummer og upload</string>
-  <string name="mark_number_dialog_subtitle">Udviklet i samarbejde med Sogu nummer pass</string>
-  <string name="member_firewall_log" formatted="false">Blokeret: Opkald: %d Beskeder: %d</string>
+  <string name="marked_by_others">%d andre personer markerede det som</string>
+  <string name="marked_by_user">markeret af mig</string>
+  <string name="menu_add">Tilføj</string>
+  <string name="menu_add_into_contact">Tilføj til eksisterende kontakt</string>
+  <string name="menu_add_new_contact">Ny kontakt</string>
+  <string name="menu_bl_add_contact">Kontakter</string>
+  <string name="menu_bl_add_manual">Tilføj</string>
+  <string name="menu_bl_call_log">Vis blokerede opkald</string>
+  <string name="menu_bl_clear">Ryd blackliste</string>
+  <string name="menu_bl_remove">Fjern fra blackliste</string>
+  <string name="menu_bl_sms_log">Tjek blokerede beskeder</string>
+  <string name="menu_call">Ring op</string>
+  <string name="menu_clear_all_call">Fjern alle blokerede opkald</string>
+  <string name="menu_clear_all_sms">Fjern alle blokerede beskeder</string>
+  <string name="menu_clear_current_call">Fjern alle blokerede opkald fra dette nummer</string>
+  <string name="menu_clear_current_sms">Fjern alle blokerede beskeder sendt fra dette nummer</string>
   <string name="menu_edit">Rediger</string>
-  <string name="mms_log_tab_title">Beskeder</string>
-  <string name="new_bw_list_button">Tilføj kontakter</string>
-  <string name="no">Annuller</string>
-  <string name="number_add_hint">Indtast telefonnummer</string>
-  <string name="opt_accept_whitelist">Accepter godkendte</string>
-  <string name="opt_reject_all">Afvis alle</string>
-  <string name="opt_reject_blacklist">Afvis blacklistede</string>
-  <string name="opt_reject_blacklist_stranger">Afvis ukendte kontakter</string>
-  <string name="opt_reject_blacklist_stranger_summary">Afvis blacklistede, accepter godkendte</string>
-  <string name="remove">Fjern fra liste</string>
-  <string name="remove_all_keywords">Er du sikker på du vil slette alle nøgleord?</string>
-  <string name="remove_call_log">Slet alle opkaldslister?</string>
-  <string name="remove_contact">Slet valgte kontakt?</string>
-  <string name="remove_delete">Slet</string>
-  <string name="remove_inf">Slet valgte information?</string>
-  <string name="remove_keyword">Er du sikker på du vils slette dette nøgleord?</string>
-  <string name="remove_sms">Slet alle beskedlister?</string>
-  <string name="save_button">Gem</string>
-  <string name="show_firewall_notification">Vis notifikationsikon</string>
-  <string name="show_notification">Vis alle notifikationer</string>
-  <string name="smart_antispam">Identificer ukendte numre</string>
-  <string name="turn_on_smart_antispam_hint">Numre vil forsøges identificeret, og markeres efter type, som kan hjælpe med at afgøre opkaldets hensigt.</string>
-  <string name="turn_on_smart_antispam_summary_off">Efterspørg kun med lokal nummer database</string>
-  <string name="turn_on_smart_antispam_summary_on">Virker kun på Wi-Fi og 3G netværk</string>
-  <string name="turn_on_smart_antispam_title">Identificer ukendte numre</string>
-  <string name="whitelist_tab_title">Godkendte</string>
+  <string name="menu_mark">Marker</string>
+  <string name="menu_no_block">Uphæv blokering</string>
+  <string name="menu_remove">Fjern</string>
+  <string name="menu_restore">Gendan til beskeder</string>
+  <string name="menu_sms">Send besked</string>
+  <string name="st_advanced_setting_group">Advancerede indstillinger</string>
+  <string name="st_block_all">Bloker opkald og beskeder</string>
+  <string name="st_block_mute">Bloker opkald og lydløse beskeder</string>
+  <string name="st_block_private_call_button">Bloker indkommende hemmeligt nummer</string>
+  <string name="st_block_setting_group">Blackliste indstillinger</string>
+  <string name="st_block_setting_title">Opkald og beskeder</string>
+  <string name="st_block_title">Bloker og log</string>
+  <string name="st_block_unknown_call">Bloker alle ukendte opkald</string>
+  <string name="st_block_unknown_sms">Bloker alle ukendte beskeder</string>
+  <string name="st_call_group">Ring op</string>
+  <string name="st_common_setting_group">Filter indstillinger</string>
+  <string name="st_filter_keywords_setting_summary1">Beskeder fra ukendte kontakter vil blive blokeret.</string>
+  <string name="st_filter_keywords_setting_summary2">Tilføj flere nøgleord adskilt af et komma.</string>
+  <string name="st_filter_keywords_setting_title">Sæt filter nøgleord</string>
+  <string name="st_filter_keywords_title">Filtrer nøgleord</string>
+  <string name="st_filter_sms_button">Filtrer spam beskeder</string>
+  <string name="st_mute_all">Lydløse opkald og beskeder</string>
+  <string name="st_mute_block">Lydløse opkald og bloker beskeder</string>
+  <string name="st_mute_title">Lydløs tilstand</string>
+  <string name="st_other_setting_group">Andre indstillinger</string>
+  <string name="st_settings_name">Indstillinger</string>
+  <string name="st_show_block_notification">Vis blokeret notifikation</string>
+  <string name="st_sms_group">Beskeder</string>
+  <string name="tab_blacklist">Blackliste</string>
+  <string name="tab_block_log">Firewall</string>
+  <string name="tab_block_log_unKnowNumber">Ukendt nummer</string>
+  <string name="tab_call">Opkaldsliste</string>
+  <string name="tab_sms">Beskedliste</string>
+  <string name="tab_title">Guard</string>
+  <string name="toast_keyword_blank">Indtast venligst et nøgleord</string>
+  <string name="toast_keyword_exist">Nøgleord eksisterer allerede</string>
+  <string name="toast_keyword_invalid">Ugyldigt nøgleord indtastet</string>
 </resources>
