--- a/Danish/main/DeskClock.apk/res/values-da/strings.xml
+++ b/Danish/main/DeskClock.apk/res/values-da/strings.xml
@@ -3,19 +3,15 @@
   <string name="add_alarm">Tilføj alarm</string>
   <string name="alarm_alert">Ringetone</string>
   <string name="alarm_alert_alert_silenced">Alarm lydløs efter %d minutter</string>
-  <string name="alarm_alert_dismiss_text">Slå fra</string>
   <string name="alarm_alert_snooze_set">Udsæt i %d minutter.</string>
-  <string name="alarm_alert_snooze_text">Udsæt</string>
   <string name="alarm_ascending_mode_summary">Alarm stiger til indstillet alarm lydstyrke.</string>
   <string name="alarm_ascending_mode_title">Alarm stigende</string>
-  <string name="alarm_button_description">Alarmer</string>
   <string name="alarm_disabled">Deaktiveret</string>
   <string name="alarm_in_silent_mode_title">Alarm i lydløs tilstand</string>
   <string name="alarm_klaxon_service_desc">Tjenesten til afspilning af alarmlyd, der er angivet i uret.</string>
   <string name="alarm_label_hint">Indtast alarm etiket</string>
   <string name="alarm_list_title">Alarmer</string>
   <string name="alarm_notify_snooze_label">%s (udsat)</string>
-  <string name="alarm_notify_snooze_text">Alarm indstillet i %s. Vælg for at annullere.</string>
   <string name="alarm_notify_text">Vælg om du vil udsætte eller slå alarmen fra.</string>
   <string name="alarm_repeat">Gentag</string>
   <string name="alarm_screen">Udseende</string>
@@ -30,9 +26,7 @@
   <string name="auto_silence_never">Fra</string>
   <string name="auto_silence_summary">Alarmer vil blive lydløse efter %d minutter</string>
   <string name="auto_silence_title">Auto-lydløs</string>
-  <string name="battery_charging_level">%d%%</string>
   <string name="cancel">Annuller</string>
-  <string name="clock_instructions">Vælg et ur</string>
   <string name="close_alarm">Luk alarm</string>
   <string name="common_settings">Generelle indstillinger</string>
   <string name="confirm_abort">Annuller</string>
@@ -44,32 +38,15 @@
   <string name="default_alarm_alert">Alarm Tema</string>
   <string name="default_alarm_title">Standard ringetone</string>
   <string name="default_label">Alarm</string>
-  <string name="default_ringtone_setting_title">Angiv standardringetone</string>
   <string name="delelte_selected_timezone">Er du sikker på du vil slette valgte tidszone(r)?</string>
   <string name="delete">Slet</string>
   <string name="delete_alarm">Slet alarm</string>
   <string name="delete_alarm_confirm">Vil du slette denne alarm?</string>
   <string name="delete_timezone_title">Slet tidszone</string>
-  <string name="desk_clock_button_description">Urvisning</string>
   <string name="dialog_confirm_abort">Vil du annullere dine ændringer?</string>
-  <string name="disable_alarm">Slå alarm fra</string>
   <string name="done">Udfør</string>
-  <string name="edit_alarm">Rediger alarm</string>
-  <string name="elapsed_hour">%d timer</string>
-  <string name="elapsed_time_format">(+%s)</string>
-  <string name="enable_alarm">Slå alarm til</string>
   <string name="every_day">hver dag</string>
   <string name="full_wday_month_day_no_year">EEEE, d. MMMM</string>
-  <string name="gallery_button_description">Galleri</string>
-  <string name="hide_clock">Skjul ur</string>
-  <string name="holiday_data_already_newest">Arbejdsdage data er allerede de nyeste</string>
-  <string name="holiday_data_no_network">Intet netværk, prøv igen senere</string>
-  <string name="holiday_data_update_failed">Kontroller for opdateringsfejl og prøv igen senere.</string>
-  <string name="holiday_data_update_succeed">Kontroller for fuldført opdatering</string>
-  <string name="holiday_data_updating">Opdaterer...</string>
-  <string name="holiday_update_summary">Tryk Kontroller opdateringer</string>
-  <string name="holiday_update_title">Arbejdsdage data opdatering</string>
-  <string name="home_button_description">Launcher</string>
   <string name="hour">1 time</string>
   <string name="hour_unit">t</string>
   <string name="hours">%s timer</string>
@@ -83,33 +60,23 @@
   <string name="legal_workday_message">(Alarm fra under ferie)</string>
   <string name="loading_ringtone">Indlæser ringetone...</string>
   <string name="menu_add_worldclock">Tilføj tidszone</string>
-  <string name="menu_alarmclock_edit">Rediger alarm</string>
-  <string name="menu_delete">Slet</string>
   <string name="menu_desk_clock">Ur på skrivebord</string>
   <string name="menu_edit_systemtime">System tid</string>
   <string name="menu_item_dock_settings">Dock indstillinger</string>
-  <string name="menu_worldclock_edit">Rediger verdensur</string>
   <string name="minute">1 minut</string>
-  <string name="minute_unit">min</string>
   <string name="minutes">%s minutter</string>
-  <string name="music_button_description">Musik</string>
   <string name="never">Aldrig</string>
-  <string name="nightmode_button_description">Skærmlys</string>
   <string name="pause">Pause</string>
   <string name="remind_ringtone">Ringetone</string>
   <string name="reset">Nulstil</string>
   <string name="revert">Gendan</string>
   <string name="set_alarm">Indstil alarm</string>
   <string name="settings">Indstillinger</string>
-  <string name="show_clock">Vis ur</string>
   <string name="shutdown_alarm_disable_summary">Deaktiver Sluk Alarm</string>
   <string name="shutdown_alarm_enable_summary">Aktiver Sluk Alarm</string>
   <string name="shutdown_alarm_title">Sluk Alarm</string>
   <string name="silent_alarm_summary">Lydløs</string>
   <string name="snooze_confirm_cancel">Annuller udsætning</string>
-  <string name="snooze_confirm_message">"Udsætning kan forsinkes，%s Udsætninger igen.
-Du kan også annullere alarmen."</string>
-  <string name="snooze_confirm_ok">OK</string>
   <string name="snooze_duration_title">Varighed for udsættelse</string>
   <string name="start">Start</string>
   <string name="start_up">Start</string>
@@ -117,23 +84,16 @@ Du kan også annullere alarmen."</string>
   <string name="stopwatch_title">Stopur</string>
   <string name="system_time_setting">Indstillinger</string>
   <string name="time">Tidspunkt</string>
+  <string name="timer_alert_alert_silenced">Timer stoppet efter %d minutter.</string>
   <string name="timer_continue">Fortsæt</string>
   <string name="timer_got_it">OK</string>
-  <string name="timer_hour">T</string>
   <string name="timer_message">%1$d minutter</string>
   <string name="timer_message_with_hour">%1$d timer og %2$d minutter</string>
-  <string name="timer_minute">M</string>
   <string name="timer_start_alarm">Tiden er udløbet!</string>
   <string name="timer_title">Timer</string>
-  <string name="timer_tutorial">Træk med uret</string>
-  <string name="timezone_exist_error_message">Kunne ikke tilføje tidszone, da den eksisterer allerede. Venligst vælg en ny.</string>
-  <string name="timezone_search_hint">Søg efter by at tilføje til verdensuret</string>
-  <string name="volume_button_dialog_title">Knap effekt</string>
+  <string name="timezone_exist_error_message">Du viser allerede denne tidszone</string>
   <string name="volume_button_setting_summary">Angiv, hvad sideknapperne gør, når der trykkes på dem under en alarm</string>
   <string name="volume_button_setting_title">Hardware knapper</string>
-  <string name="wait_when_operating_data_message">Behandler data, vent venligst.</string>
-  <string name="weather_fetch_failure">Vejroplysninger er ikke tilgængelige lige nu.</string>
-  <string name="weekend_alarm_clock">Weekend alarm</string>
   <string name="workday_alarm_clock">Arbejdsdag alarm</string>
   <string name="worldclock_empty_text">Ingen verdensure</string>
   <string name="worldclock_title">Verdensur</string>
